--- a/base-express-mvc-project/package.json
+++ b/base-express-mvc-project/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser":"^1.20.0",
+    "dotenv":"16.0.0",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
     "morgan": "^1.10.0"
